--- a/file-manager.html
+++ b/file-manager.html
@@ -51,6 +51,7 @@
 
   <script>
   (async function(){
+    const STORAGE_KEY = 'teacherFileItems';
     const items = [];
     let currentParent = null;
     let viewMode = 'grid';
@@ -60,20 +61,34 @@
     const btnList     = document.getElementById('btnViewList');
     const btnGrid     = document.getElementById('btnViewGrid');
     const breadcrumb  = document.getElementById('breadcrumb');
-
-    async function loadItems() {
-      try {
-        const res = await fetch('/api/teacher-items');
-        const data = await res.json();
-        items.splice(0, items.length, ...data);
-      } catch (err) {
-        console.error('Failed to load items. Using defaults.', err);
-        items.splice(0, items.length,
-          { id:1, name:'규칙 목록',   type:'folder', parent:null, created: new Date() },
-          { id:2, name:'문제 목록',   type:'folder', parent:null, created: new Date() },
-          { id:3, name:'업무 목록',   type:'folder', parent:null, created: new Date() }
-        );
+    breadcrumb.addEventListener('click', () => {
+      if (currentParent !== null) {
+        const parent = items.find(i => i.id === currentParent)?.parent || null;
+        currentParent = parent;
+        render();
       }
+    });
+
+    function loadItems() {
+      try {
+        const data = JSON.parse(localStorage.getItem(STORAGE_KEY) || '[]');
+        if (data.length) {
+          items.splice(0, items.length, ...data);
+          return;
+        }
+      } catch (err) {
+        console.error('Failed to load items from storage', err);
+      }
+      items.splice(0, items.length,
+        { id:1, name:'규칙 목록',   type:'folder', parent:null, created: new Date() },
+        { id:2, name:'문제 목록',   type:'folder', parent:null, created: new Date() },
+        { id:3, name:'업무 목록',   type:'folder', parent:null, created: new Date() }
+      );
+      saveItems();
+    }
+
+    function saveItems() {
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(items));
     }
 
     function render() {
@@ -143,23 +158,15 @@
       }
     }
 
-    async function moveItem(id, toParent) {
+    function moveItem(id, toParent) {
       const it = items.find(x=>x.id===id);
       if (!it) return;
       it.parent = toParent;
+      saveItems();
       render();
-      try {
-        await fetch(`/api/teacher-items/${id}`, {
-          method: 'PATCH',
-          headers: {'Content-Type':'application/json'},
-          body: JSON.stringify({parent: toParent})
-        });
-      } catch (err) {
-        console.error('Failed to move item', err);
-      }
     }
 
-    btnNewFldr.addEventListener('click', async ()=>{
+    btnNewFldr.addEventListener('click', ()=>{
       const name = prompt('새 폴더 이름:');
       if (!name) return;
       const newItem = {
@@ -170,24 +177,14 @@
         created: new Date()
       };
       items.push(newItem);
+      saveItems();
       render();
-      try {
-        const res = await fetch('/api/teacher-items', {
-          method: 'POST',
-          headers: {'Content-Type':'application/json'},
-          body: JSON.stringify(newItem)
-        });
-        const saved = await res.json();
-        newItem.id = saved.id;
-      } catch (err) {
-        console.error('Failed to save folder', err);
-      }
     });
 
     btnList.addEventListener('click', ()=>{ viewMode='list'; render(); });
     btnGrid.addEventListener('click', ()=>{ viewMode='grid'; render(); });
 
-    await loadItems();
+    loadItems();
     render();
   })();
   </script>
