--- a/index.html
+++ b/index.html
@@ -227,7 +227,10 @@
             <div id="work-management-tab-content" class="tab-content">
                 <div class="flex justify-between items-center mb-4">
                     <h2 class="text-2xl font-bold">📂 업무 관리</h2>
-                    <button id="open-draft-modal-btn" class="btn btn-primary">AI 기안 만들기</button>
+                    <div class="space-x-2">
+                        <button id="open-draft-modal-btn" class="btn btn-primary">AI 기안 만들기</button>
+                        <button id="open-file-manager-btn" class="btn btn-secondary">파일 관리</button>
+                    </div>
                 </div>
                 <div id="work-doc-list" class="bg-white p-4 rounded-lg shadow">
                     <p class="text-center text-gray-500">작성된 문서가 없습니다.</p>
@@ -2519,6 +2522,10 @@
         // --- Work Management ---
         let currentDraftIndex = null;
         document.getElementById('open-draft-modal-btn').addEventListener('click', () => openDraftModal());
+        const fileManagerBtn = document.getElementById('open-file-manager-btn');
+        if (fileManagerBtn) {
+            fileManagerBtn.addEventListener('click', () => window.open('file-manager.html', '_blank'));
+        }
 
         function openDraftModal(index = null) {
             currentDraftIndex = index;
